# EdgeDetectApp

./: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  canny_processor.cpp  canny_processor.h  native-lib.cpp
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
web/: package.json  tsconfig.json
web/public/: index.html
web/src/: index.ts
